# base_mpc

./: .gitignore  README.md  pyproject.toml
base_mpc/: README.md  config.py
base_mpc/docs/: installation.md  simulation.md
base_mpc/examples/: EnvConfig.py  base_mpc_example.py  boxer_example.py  make_solver.py
base_mpc/examples/config/: boxerMPCconfig.yaml  boxerMpc.yaml
base_mpc/forcespro_solver_generation/: base_mpc_settings.py  base_mpc_solver.py  control_modules.py  helpers.py  inequality.py  objective.py  pyproject.toml
base_mpc/mpc_pkg/: CMakeLists.txt  package.xml  setup.py
base_mpc/mpc_pkg/include/mpc_pkg/: SFC_generate_cls.h  logger.h
base_mpc/mpc_pkg/launch/: nav2goal.launch
base_mpc/mpc_pkg/scripts/ROS_visualization/: logger.py
base_mpc/mpc_pkg/src/: SFC_generate_cls.cpp  SFC_generate_node.cpp  goal_receiver_node.py  logger.cpp  mpc_node.py
base_mpc/mpc_pkg/srv/: GoalInfo.srv  MpcConstraint.srv  PoseInfo.srv  TwistInfo.srv
base_mpc/planner/: mpcPlanner.py
base_mpc/python_solver_generation/: base_mpc_settings.py  base_mpc_solver.py  control_modules.py  dynamics.py  helpers.py  inequality.py  objective.py  pyproject.toml
